--- a/styles.css
+++ b/styles.css
@@ -15,10 +15,10 @@
  */
 
 body {
-  margin: 1em;
-  padding: 0;
-  font-family: Google Sans, Noto, Roboto, Helvetica Neue, sans-serif;
-  color: #244376;
+	margin: 1em;
+	padding: 0;
+	font-family: "Futura LT Bold";
+	color: #000000;
 }
 
 
