--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,7 @@ body {
 model-viewer {
     width: 100%;
     height: 65vh;
+    max-width: 822 px;
 }
 
 .attribution {
@@ -75,4 +76,8 @@ footer {
 }
 #header {
     height: 10vh;
+}
+img {
+    max-width: 411px;
+    height: auto;
 }
