--- a/styles.css
+++ b/styles.css
@@ -76,8 +76,9 @@ footer {
 }
 #header {
     height: 10vh;
+    max-width: 411px;
 }
 img {
-    max-width: 411px;
     height: auto;
+    width: auto;
 }
